k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: engine
  namespace: default
spec:
  serviceName: engine-svc
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine
          image: ayalm/engine:1.0.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: engine-data
              mountPath: /app/data
          livenessProbe:
            exec:
              command: ["pgrep", "-f", "seyoawe"]
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            exec:
              command: ["pgrep", "-f", "seyoawe"]
            initialDelaySeconds: 5
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: engine-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
